refactor(front): privatize env config for SEO improvements (#1131)
Closes: #1131

--- a/back/src/plugins/dashboard/admin/src/translations/en.json
+++ b/back/src/plugins/dashboard/admin/src/translations/en.json
@@ -1,10 +1,12 @@
 {
   "dashboard.posts.title": "Posts",
   "dashboard.projects.title": "Projects",
+  "dashboard.experiences.title": "Projects",
   "dashboard.homepage.title": "Homepage",
   "dashboard.analytics.title": "Analytics",
   "dashboard.posts.label": "Edit Posts",
   "dashboard.projects.label": "Edit Projects",
+  "dashboard.experiences.label": "Edit Projects",
   "dashboard.homepage.label": "Edit Homepage",
   "dashboard.analytics.label": "Visit plausible.io"
 }
